--- a/index.html
+++ b/index.html
@@ -2,11 +2,70 @@
 <html>
 <head>
   <title>Jardův web</title>
-</head>
-<body style="background:black;color:white;text-align:center;font-family:Arial">
 
-<h1>Čau, já jsem Jarda 😎</h1>
-<p>Můj první web na internetu!</p>
+  <style>
+    body {
+      margin: 0;
+      background: linear-gradient(135deg, #0f0f0f, #1a1a2e);
+      color: white;
+      font-family: Arial, sans-serif;
+      text-align: center;
+    }
+
+    nav {
+      background: black;
+      padding: 15px;
+    }
+
+    nav a {
+      color: cyan;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      color: white;
+    }
+
+    .hero {
+      padding: 100px 20px;
+    }
+
+    button {
+      padding: 12px 25px;
+      font-size: 16px;
+      background: cyan;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    button:hover {
+      background: white;
+      color: black;
+    }
+
+  </style>
+</head>
+
+<body>
+
+<nav>
+  <a href="#">Domů</a>
+  <a href="#">O mně</a>
+  <a href="#">Kontakt</a>
+</nav>
+
+<div class="hero">
+  <h1>Čau, já jsem Jarda 😎</h1>
+  <p>Programuju svůj první web</p>
+  <br>
+  <button onclick="alert('Jarda je budoucí developer 💻🔥')">
+    Klikni na mě
+  </button>
+</div>
 
 </body>
 </html>
