--- a/index.html
+++ b/index.html
@@ -1,71 +1,112 @@
 <!DOCTYPE html>
-<html>
+<html lang="cs">
 <head>
-  <title>Jardův web</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Zubní ordinace DentCare</title>
 
-  <style>
-    body {
-      margin: 0;
-      background: linear-gradient(135deg, #0f0f0f, #1a1a2e);
-      color: white;
-      font-family: Arial, sans-serif;
-      text-align: center;
-    }
+<style>
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background: #f4f9fb;
+  color: #333;
+}
 
-    nav {
-      background: black;
-      padding: 15px;
-    }
+nav {
+  background: #0a3d62;
+  padding: 15px;
+  text-align: center;
+}
 
-    nav a {
-      color: cyan;
-      text-decoration: none;
-      margin: 0 15px;
-      font-weight: bold;
-    }
+nav a {
+  color: white;
+  text-decoration: none;
+  margin: 0 20px;
+  font-weight: bold;
+}
 
-    nav a:hover {
-      color: white;
-    }
+header {
+  background: linear-gradient(135deg,#74b9ff,#0984e3);
+  color: white;
+  text-align: center;
+  padding: 80px 20px;
+}
 
-    .hero {
-      padding: 100px 20px;
-    }
+section {
+  padding: 60px 20px;
+  text-align: center;
+}
 
-    button {
-      padding: 12px 25px;
-      font-size: 16px;
-      background: cyan;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
+.services div {
+  margin: 20px 0;
+}
 
-    button:hover {
-      background: white;
-      color: black;
-    }
+button {
+  padding: 12px 25px;
+  background: #0984e3;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 16px;
+}
 
-  </style>
+button:hover {
+  background: #0652DD;
+}
+
+footer {
+  background: #0a3d62;
+  color: white;
+  text-align: center;
+  padding: 20px;
+}
+</style>
 </head>
 
 <body>
 
 <nav>
-  <a href="#">Domů</a>
-  <a href="#">O mně</a>
-  <a href="#">Kontakt</a>
+  <a href="#sluzby">Služby</a>
+  <a href="#cenik">Ceník</a>
+  <a href="#kontakt">Kontakt</a>
 </nav>
 
-<div class="hero">
-  <h1>Čau, já jsem Jarda 😎</h1>
-  <p>Programuju svůj první web</p>
+<header>
+  <h1>Zubní ordinace DentCare 🦷</h1>
+  <p>Kvalitní péče o váš úsměv</p>
   <br>
-  <button onclick="alert('Jarda je budoucí developer 💻🔥')">
-    Klikni na mě
+  <button onclick="alert('Pro objednání volejte 777 123 456')">
+    Objednat se
   </button>
-</div>
+</header>
+
+<section id="sluzby" class="services">
+  <h2>Naše služby</h2>
+  <div>✔ Preventivní prohlídky</div>
+  <div>✔ Dentální hygiena</div>
+  <div>✔ Bělení zubů</div>
+  <div>✔ Zubní implantáty</div>
+</section>
+
+<section id="cenik">
+  <h2>Ceník</h2>
+  <p>Vstupní vyšetření: 800 Kč</p>
+  <p>Hygiena: 1500 Kč</p>
+  <p>Bělení zubů: 4000 Kč</p>
+</section>
+
+<section id="kontakt">
+  <h2>Kontakt</h2>
+  <p>Adresa: Hlavní 123, Praha</p>
+  <p>Telefon: 777 123 456</p>
+  <p>Email: info@dentcare.cz</p>
+</section>
+
+<footer>
+  © 2026 DentCare | Všechna práva vyhrazena
+</footer>
 
 </body>
 </html>
